<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <string name="article_photo_transition">photo transition</string>
    <string name="list_thumbnail_content_description">article_thumbnail_image</string>
    <string name="list_item_scrim_content_description">list item scrim</string>
    <string name="article_detail_image">article image</string>
    <string name="article_detail_scrim">article_image_scrim</string>

</resources>
