<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/list_item_cardview"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--suppress AndroidLintContentDescription -->
        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/list_thumbnail_content_description"
            android:transitionName="@string/article_photo_transition"
            android:background="@color/photo_placeholder" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/list_item_scrim_content_description"
            android:background="@drawable/photo_background_protection" />

        <TextView
            android:id="@+id/article_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            tools:text="Some long ass stupid title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingLeft="@dimen/list_article_title_padding_horizontal"
            android:paddingTop="@dimen/list_article_title_padding_top"
            android:paddingRight="@dimen/list_article_title_padding_horizontal"
            android:paddingBottom="@dimen/list_article_title_padding_bottom"
            android:layout_gravity="bottom"
            android:textColor="@color/ltgray"
            android:ellipsize="end"
            android:maxLines="4" />

        <TextView
            android:id="@+id/article_subtitle"
            style="@style/TextAppearance.AppCompat.Body1"
            tools:text="Some long ass stupid subtitle"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_article_title_padding_horizontal"
            android:paddingRight="@dimen/list_article_title_padding_horizontal"
            android:paddingBottom="@dimen/list_article_subtitle_padding_bottom"
            android:textColor="@color/white"
            android:maxLines="2"
            android:ellipsize="end" />
    </FrameLayout>

</android.support.v7.widget.CardView>
