<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.xyzreader.ui.ObservableScrollView
        android:id="@+id/scrollview"
        android:nestedScrollingEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:expandedTitleMarginStart="@dimen/detail_Toolbar_margin_start"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:id="@+id/photo_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/photo_placeholder">
                    <!--suppress AndroidLintContentDescription -->
                    <ImageView
                        android:id="@+id/photo"
                        android:contentDescription="@string/article_detail_image"
                        android:transitionName="@string/article_photo_transition"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_image_height"
                        app:layout_collapseMode="parallax" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_image_height"
                        android:background="@drawable/photo_background_protection"
                        app:layout_collapseMode="parallax" />

                    <LinearLayout
                        android:id="@+id/meta_bar"
                        app:layout_collapseMode="pin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/detail_metabar_vert_padding"
                        android:paddingLeft="@dimen/detail_inner_horiz_margin"
                        android:paddingRight="@dimen/detail_inner_horiz_margin"
                        android:paddingTop="@dimen/detail_metabar_vert_padding">

                        <TextView
                            android:id="@+id/article_title"
                            style="?android:attr/textAppearanceLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:lineSpacingMultiplier="0.9"
                            android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                            android:textColor="#8fff"
                            android:textSize="@dimen/detail_title_text_size"
                            android:textStyle="bold"
                            tools:text="Some Long Ass Stupid Title Here" />

                        <TextView
                            android:id="@+id/article_byline"
                            tools:text="Some Author Here"
                            style="?android:attr/textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#8fff" />
                    </LinearLayout>

                </FrameLayout>
            </android.support.design.widget.CollapsingToolbarLayout>

            <com.example.xyzreader.ui.MaxWidthLinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="@dimen/detail_card_max_width"
                android:background="#fff"
                android:elevation="2dp"
                android:layout_marginTop="@dimen/detail_card_top_margin">

                <TextView
                    android:id="@+id/article_body"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                    android:paddingBottom="@dimen/detail_body_bottom_margin"
                    android:textColor="@color/dkgray"
                    android:textColorLink="@color/theme_accent"
                    android:textSize="@dimen/detail_body_text_size"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />

            </com.example.xyzreader.ui.MaxWidthLinearLayout>
        </FrameLayout>
    </com.example.xyzreader.ui.ObservableScrollView>

    <android.support.design.widget.FloatingActionButton android:id="@+id/share_fab"
        android:stateListAnimator="@anim/fab_state_list_anim"
        android:background="@drawable/add_fab_background"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        android:src="@drawable/ic_share"
        android:elevation="@dimen/fab_elevation"
        android:contentDescription="@string/action_share" />

</android.support.design.widget.CoordinatorLayout>
